# wifiAllocation

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env  __main__.py  database.db  db.py  db_actions.py  db_utils.py  models.py  server.py  server_utils.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/Components/LoginRegister/: LoginRegister.css  LoginRegister.jsx
frontend/src/Components/Status/: Status.css  Status.jsx
frontend/src/Components/Terms/: Terms.jsx
frontend/src/Components/advertisement/: ad.css
frontend/src/Components/buttons/: buttons.css  buttons.jsx
frontend/src/Pages/LoginRegister/: LoginRegister.css  LoginRegister.jsx  WaitForToken.jsx  _LoginForm.jsx  _RegisterForm.jsx
frontend/src/Pages/Status/: FreeUserStatus.jsx  Status.css  Status.jsx
frontend/src/Pages/Terms/: Terms.css  Terms.jsx
frontend/src/Pages/pricing/: pricing.css  pricing.jsx
frontend/src/Services/: api.js  api.json  dbmodels.js  login.service.js  utils.js
frontend/src/components/QR/: QRPopUp.jsx
frontend/src/components/advertisement/: ad.jsx
frontend/src/components/buttons/: buttons.jsx
frontend/src/components/popup/: PopUp.css  PopUp.jsx
frontend/src/components/processing screen/: processingScreen.css  processingScreen.jsx
frontend/src/styles/: mobile.css  page.css  utils.css
wifiRouter/: ArchitectureOverview.txt
wifiRouter/configurations_file/: hostapd.conf  nodogsplash.conf
