[tool.poetry]
name = "wifiallocation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
email-validator = "^2.1.1"
requests = "^2.31.0"
logging = "^0.4.9.6"
asyncio = "^3.4.3"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
sqlmodel = "^0.0.19"
pydantic = "1.10.15"
load-dotenv = "^0.1.0"
qrcode = "^7.4.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
